use KWindowInfo to check for transients; take more care with transients

it does a rather more thorough job and fixes the problem of utility
windows that are transients (e.g. toolboxes pulled out of app windows)
preventing windows from being minimized properly from the tasks widget

this is probably far older than the 2.5 year old bug report.

BUG:259255